# staliaduriou

./: .gitignore  Cargo.toml  README.md  Rocket.toml  bookmarks_bedniverel.html  bootstrap.php  choariou.php  composer.json  data.yml  difazier.php  difazier_an_drouizig-0.15.1webext.xpi  download.sh  download_builds.sh  download_libs.sh  hezoug.php  index.php  traouall.php
src/: main.rs  model.rs
static/: bookmarks_bedniverel.html
static/css/: theme.css
templates/: base.html.tera  base.html.twig  choariou.html.tera  choariou.html.twig  difazier.html.tera  difazier.html.twig  hezoug.html.tera  hezoug.html.twig  index.html.tera  index.html.twig  macros.html.tera  macros.html.twig  traouall.html.tera  traouall.html.twig
