[package]
name = "staliaduriou"
version = "0.1.0"
authors = ["Gwenn M <gwenn.meynier@smile.fr>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
woothee = "0.8"


[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["serve", "tera_templates"]
